2006-11-18  Andreas Røsdal  <andrearo@pvv.ntnu.no>

	* src/lib/gsudoku.py: Convert keypad numbers to normal numbers,
	patch from Thomas Andersen in Bug #379285. 

2006-11-18  Andreas Røsdal  <andrearo@pvv.ntnu.no>

	* glade/game_selector/game_selector.glade:
	* glade/game_selector/game_selector.gladep: Remove unused glade files.

2006-11-05  Andreas Røsdal  <andrearo@pvv.ntnu.no>

	* src/lib/gtk_goodies/gconf_wrapper.py: Add support for BooleanType.

2006-11-04  Thomas M. Hinkle  <Thomas_Hinkle@alumni.brown.edu>

	* images/footprints.png: Used shoe-prints. Note that if we get a
	real artist to pretty up this icon, it needs to contain mostly
	solid black that will gets properly re-colored when we add
	trackers of different colors.
	* src/lib/gnome_sudoku.py: Tweak our fix to Bug 369531; Use
	STOCK_DIALOG_INFO instead of STOCK_INFO for hints. Make sure
	tracker is off by default.
	* src/lib/gsudoku.py: Change colors for trackers to tango-y colors.	
	* src/lib/gtk_goodies/image_extras.py: Fix re-coloring of black png files.
	* src/lib/saver.py: Don't automatically show trackers just because
	there *are* trackers for a game; rely on the UI to save the
	toggled-state of tracker visibility on its own.

2006-11-03  Thomas M. Hinkle  <Thomas_Hinkle@alumni.brown.edu>

	* src/lib/gnome_sudoku.py: Fix Bug 369531 [sudoku uses wrong icon for hints]
	* src/lib/*: Remove extra files that don't belong in CVS.
	* src/lib/gsudoku.py: Don't cause a traceback if user clicks "hint" before a square is selected.

2006-10-30  Andreas Røsdal  <andrearo@pvv.ntnu.no>

	* setup.py: Remove setup.py, which has been replaced by makefiles.

2006-10-28  Andreas Røsdal  <andrearo@pvv.ntnu.no>

	* src/lib/gnome_sudoku.py:
	* src/lib/game_selector.py:
	* images/footprints.png:
	* images/winner.png:
	* images/Makefile.am:
	* glade/high_scores.glade: Clean up image usage, for instance
	we can't use and modify the GNOME logo, because it's a trademark.

2006-10-27  Andreas Røsdal  <andrearo@pvv.ntnu.no>
