@@ -1,4 +1,9 @@
-2006-11-18  Andreas Røsdal  <andrearo@pvv.ntnu.no>
+2006-11-28  Andreas Røsdal  <andrearo@pvv.ntnu.no>
+
+	* src/lib/gsudoku.py: se gtk.AboutDialog instead of gnome.ui.About,
+	patch from Thomas Andersen in Bug #379283. 
+
+2006-11-28  Andreas Røsdal  <andrearo@pvv.ntnu.no>
 
 	* src/lib/gsudoku.py: Convert keypad numbers to normal numbers,
 	patch from Thomas Andersen in Bug #379285. 
